--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
-
+h3 {
+    text-align: center;
+}
 /* Navigation Bar Styles */
 .navLeft {
     list-style-type: none;
@@ -21,3 +23,18 @@
 }
 
 /* Split Pane Styles */
+.tableLeft {
+    width: 50%;
+    float: left;
+    table-layout: fixed;
+}
+
+.tableRight {
+    width: 50%;
+    float: right;
+    table-layout: fixed;
+}
+
+th {
+    width: 20%
+}
