Added the skeleton for a wizard for manually adding a new ride request

--- a/views/index.css
+++ b/views/index.css
@@ -1,6 +1,12 @@
-h3 {
+ul h3 {
     text-align: center;
+    z-index: 0;
 }
+
+#addReq {
+    z-index: 1;
+}
+
 /* Navigation Bar Styles */
 .navLeft {
     list-style-type: none;
@@ -10,6 +16,7 @@ h3 {
     background-color: #AC2B37;
     width: 50%;
     float: left;
+    z-index: 0;
 }
 
 .navRight {
@@ -20,6 +27,32 @@ h3 {
     background-color: blue;
     width: 50%;
     float: right;
+    z-index: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #AC2B37;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: gray;
 }
 
 /* Split Pane Styles */
