--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 
 <!-- Left Navigation Bar -->
 <ul class="navLeft">
+    <li><a href="addRequest.html">Add a Request</a></li>
     <h3>New Requests</h3>
 </ul>
 
@@ -40,6 +41,7 @@
             <th>Accommodations</th>
             <th>Time In</th>
         </tr>
+
     </table>
 </div>
 
