--- a/views/addRequest.css
+++ b/views/addRequest.css
@@ -46,3 +46,15 @@ li a {
 li a:hover {
     background-color: gray;
 }
+
+/* Navbar Styles */
+.navbar {
+    background-color: #ac2b37;
+}
+.navbar .navbar-brand {
+    color: #ecf0f1;
+}
+.navbar .navbar-brand:hover,
+.navbar .navbar-brand:focus {
+    color: #ffbbbc;
+}
