--- a/views/addRequest.html
+++ b/views/addRequest.html
@@ -1,34 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Add a Request</title>
-    <link rel="stylesheet" href="addRequest.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script
-            src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="addRequest.css">
 </head>
 <body>
 
-<ul>
-    <li><a href="index.html">Home</a></li>
-    <h3>Add a Request</h3>
-</ul>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">Home</a>
+        </div>
+    </div>
+</nav>
 
-<section class="form">
-
-    <input type="text" class="formField" placeholder="Request a ride to...">
-    <input type="text" class="formField" placeholder="Request a ride from...">
-    <input type="text" class="formField" placeholder="How many passengers...">
-    <input type="text" class="formField" placeholder="Any accommodations...">
-
-    <input type="submit">
-
-</section>
+<div class="container" style="align-content: center">
 
 
+    <h2 style="text-align: center">Request Form</h2>
+    <form action="" method="POST">
+        <div class="form-group">
+            <label for="goingTo">Ride Going To:</label>
+            <input type="text" class="form-control" id="goingTo">
+        </div>
+
+        <div class="form-group">
+            <label for="comingFrom">Ride Coming From:</label>
+            <input type="text" class="form-control" id="comingFrom">
+        </div>
+
+        <div class="form-group">
+            <label for="numPassengers">Number of Passengers:</label>
+            <input type="number" class="form-control" min="0" id="numPassengers">
+        </div>
+
+        <div class="form-group">
+            <label for="accommodations">Any Accommodations:</label>
+            <input type="text" class="form-control" id="accommodations">
+        </div>
+
+        <div class="form-group text-center">
+            <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
+        </div>
+    </form>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
