--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>SNAP Dispatcher</title>
     <meta charset="UTF-8">
-    <title>SNAP</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<!-- Left Navigation Bar -->
-<ul class="navLeft">
-    <li><a href="addRequest.html">Add a Request</a></li>
-    <h3>New Requests</h3>
-</ul>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <span>
+                <a class="navbar-brand" href="addRequest.html">Add Request</a>
+                <h4 style="text-align: center">New Requests</h4>
+            </span>
+        </div>
+    </div>
+</nav>
 
-<!-- Right Navigation Bar -->
-<ul class="navRight">
-    <h3>In Process</h3>
-</ul>
 
 <!-- Left Table -->
 <div class="tableLeft">
-<table>
-    <tr>
-        <th>From</th>
-        <th>To</th>
-        <th>no. Passengers</th>
-        <th>Accommodations</th>
-        <th>Time In</th>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <th>From</th>
+            <th>To</th>
+            <th>no. Passengers</th>
+            <th>Accommodations</th>
+            <th>Time In</th>
+        </tr>
+    </table>
 </div>
 
 <!-- Right Table -->
@@ -45,5 +51,14 @@
     </table>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
