Fixed bugs in post route and form for submitRequest

--- a/views/addRequest.html
+++ b/views/addRequest.html
@@ -28,33 +28,33 @@
     <form action="/submitRequest" method="post">
 
         <div class="form-group">
-            <label for="requestID">Request ID:</label>
-            <input type="text" class="form-control" id="requestID">
+            <label>Request ID:</label>
+            <input type="text" class="form-control" name="requestID">
         </div>
 
         <div class="form-group">
-            <label for="goingTo">Ride Going To:</label>
-            <input type="text" class="form-control" id="goingTo">
+            <label>Ride Going To:</label>
+            <input type="text" class="form-control" name="goingTo">
         </div>
 
         <div class="form-group">
-            <label for="comingFrom">Ride Coming From:</label>
-            <input type="text" class="form-control" id="comingFrom">
+            <label>Ride Coming From:</label>
+            <input type="text" class="form-control" name="comingFrom">
         </div>
 
         <div class="form-group">
-            <label for="numPassengers">Number of Passengers:</label>
-            <input type="number" class="form-control" min="0" id="numPassengers">
+            <label>Number of Passengers:</label>
+            <input type="number" class="form-control" min="0" name="numPassengers">
         </div>
 
         <div class="form-group">
-            <label for="accommodations">Any Accommodations:</label>
-            <input type="text" class="form-control" id="accommodations">
+            <label>Any Accommodations:</label>
+            <input type="text" class="form-control" name="accommodations">
         </div>
 
         <div class="form-group">
-            <label for="timeArrived">Time of Request:</label>
-            <input type="text" class="form-control" id="timeArrived">
+            <label>Time of Request:</label>
+            <input type="text" class="form-control" name="timeArrived">
         </div>
 
         <div class="form-group text-center">
