Auto stash before rebase of "origin/master"

--- a/views/index.css
+++ b/views/index.css
@@ -1,3 +1,31 @@
+html,body{
+    height:100%;
+    margin:0;
+    padding:0;
+    background-color:#80808059;
+}
+
+/*split pane styles*/
+.split{
+    position:absolute;
+    width:50%;
+    height:100%;
+    /*padding:0.6em;*/
+}
+
+/* Left side*/
+.leftSplit{
+    left: 0;
+    width: 50%;
+}
+
+/* Right side*/
+.rightSplit{
+    right:0;
+    width:50%;
+}
+
+
 ul h3 {
     text-align: center;
     z-index: 0;
@@ -7,31 +35,102 @@ ul h3 {
     z-index: 1;
 }
 
-/* Navbar Styles */
-.navbar {
-    background-color: #ac2b37;
-}
-.navbar .navbar-brand {
-    color: #ecf0f1;
-}
-.navbar .navbar-brand:hover,
-.navbar .navbar-brand:focus {
-    color: #ffbbbc;
+/* Navigation Bar Styles */
+.navLeft {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #CC0033;
+    width: 100%;
+    float: left;
+    z-index: 0;
+    border-radius:10px;
 }
 
-/* Split Pane Styles */
-.tableLeft {
-    width: 50%;
+.navRight {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #3333CC;
+    width: 100%;
+    float: right;
+    z-index: 0;
+    border-radius:10px;
+
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #AC2B37;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: gray;
+}
+
+/* Table styles */
+.dtLeft {
+    width: 100%;
     float: left;
     table-layout: fixed;
 }
 
-.tableRight {
-    width: 50%;
-    float: right;
+.dtRight {
+    width: 100%;
+    float: left;
     table-layout: fixed;
 }
 
-th {
-    width: 20%
+.From{
+    width:20%;
+}
+
+.To{
+    width:20%;
+}
+
+.Passengers{
+    width:10%;
+}
+
+.Accom{
+    width: 40%;
+}
+
+.Time{
+    width:10%;
+}
+
+.leftTable tr:nth-child(even) td{
+    background-color:#FF6666;
+}
+
+.leftTable tr:nth-child(odd) td{
+    background-color:#AAAAAA;
+}
+
+.rightTable tr:nth-child(even) td{
+    background-color:#3366FF;
+}
+
+.rightTable tr:nth-child(odd) td{
+    background-color:#AAAAAA;
 }
