--- a/views/index.html
+++ b/views/index.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SNAP Dispatcher</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>SNAP</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <span>
-                <a class="navbar-brand" href="addRequest.html">Add Request</a>
-                <h4 style="text-align: center">New Requests</h4>
-            </span>
-        </div>
+<div class = "split leftSplit">
+
+    <!-- Left Navigation Bar -->
+    <ul class="navLeft">
+        <li><a href="addRequest.html">Add a Request</a></li>
+        <h3>New Requests</h3>
+    </ul>
+
+    <!-- Left Table -->
+    <div class="dtLeft">
+        <table class = "leftTable">
+            <tr>
+                <!--Using same class name as right table to make them have the same width-->
+                <th class ="From">From</th>
+                <th class ="To">To</th>
+                <th class ="Passengers">no. Passengers</th>
+                <th class ="Accom">Accommodations</th>
+                <th class="time">Time In</th>
+            </tr>
+            <tr>
+                <td>Wpi</td>
+                <td>Price Chopper</td>
+                <td>4</td>
+                <td>No</td>
+                <td>17:43</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>No</td>
+                <td>2:00</td>
+            </tr>
+
+        </table>
     </div>
-</nav>
 
-
-<!-- Left Table -->
-<div class="tableLeft">
-    <table>
-        <tr>
-            <th>From</th>
-            <th>To</th>
-            <th>no. Passengers</th>
-            <th>Accommodations</th>
-            <th>Time In</th>
-        </tr>
-    </table>
 </div>
 
-<!-- Right Table -->
-<div class="tableRight">
-    <table>
-        <tr>
-            <th>From</th>
-            <th>To</th>
-            <th>no. Passengers</th>
-            <th>Accommodations</th>
-            <th>Time In</th>
-        </tr>
+<div class ="split rightSplit">
 
-    </table>
+    <!-- Right Navigation Bar -->
+    <ul class="navRight">
+        <h3>In Process</h3>
+    </ul>
+
+    <!-- Right Table -->
+    <div class="dtRight">
+        <table class="rightTable">
+            <tr>
+                <!--Using same class name as left table to make them have the same width-->
+                <th class ="From">From</th>
+                <th class ="To">To</th>
+                <th class ="Passengers">no. Passengers</th>
+                <th class = "Accom">Accommodations</th>
+                <th class ="Time">Time In</th>
+            </tr>
+
+        </table>
+    </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
 </body>
 </html>
