--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
     <!-- Left Navigation Bar -->
     <ul class="navLeft">
-        <li><a href="addRequest.html">Add a Request</a></li>
+        <li><a href="addRequest.html"><button>Add a Request</button></a></li>
         <h3>New Requests</h3>
     </ul>
 
@@ -24,7 +24,7 @@
                 <th class ="To">To</th>
                 <th class ="Passengers">no. Passengers</th>
                 <th class ="Accom">Accommodations</th>
-                <th class="time">Time In</th>
+                <th class="Time">Time In</th>
             </tr>
             <tr>
                 <td>Wpi</td>
@@ -37,9 +37,108 @@
                 <td>Union Station</td>
                 <td>WPI</td>
                 <td>2</td>
-                <td>No</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkk　　　k　k　k　k k k k kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
                 <td>2:00</td>
             </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>ｊｇしあｇｊ　　こがが</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk k kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>2:00</td>
+            </tr>
+
 
         </table>
     </div>
@@ -58,11 +157,21 @@
         <table class="rightTable">
             <tr>
                 <!--Using same class name as left table to make them have the same width-->
+                <!-- move this outside the table so that it stays-->
                 <th class ="From">From</th>
                 <th class ="To">To</th>
                 <th class ="Passengers">no. Passengers</th>
                 <th class = "Accom">Accommodations</th>
+                <th class = "vanNo">Van No.</th>
                 <th class ="Time">Time In</th>
+            </tr>
+            <tr>
+                <td>Union Station</td>
+                <td>WPI</td>
+                <td>2</td>
+                <td>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                <td>1</td>
+                <td>2:00</td>
             </tr>
 
         </table>
