Added comment in css file where table alternates color of its entries

--- a/views/index.css
+++ b/views/index.css
@@ -189,6 +189,8 @@ thread, tbody{
     width:10%;
 }
 
+
+/* alternate color of table entries*/
 .leftTable tr:nth-child(even) td{
     background-color:#FF6666;
 }
