--- a/views/assignNewRequest.ejs
+++ b/views/assignNewRequest.ejs
@@ -20,7 +20,7 @@
         </div>
 
         <div style="float:right " class="navbar-header">
-            <a style="color: white" class="navbar-brand clickable-delete" data-id='/deleteRequest/<%=request.idnewRequests %>'>Delete Request</a>
+            <a style="color: white" class="navbar-brand clickable-delete" data-id='/deleteNewRequest/<%=request.idnewRequests %>'>Delete Request</a>
         </div>
     </div>
 </nav>
