--- a/views/deleteProcessRequest.ejs
+++ b/views/deleteProcessRequest.ejs
@@ -20,7 +20,7 @@
         </div>
 
         <div style="float:right" class="navbar-header">
-            <a style="color: white" class="navbar-brand" href="/index">Assign Request</a>
+            <a style="color: white" class="navbar-brand clickable-modify" data-id='/assignProcessRequest/<%=request.idinProcessRequests %>'>Assign Request</a>
         </div>
     </div>
 </nav>
@@ -56,13 +56,13 @@
         </div>
 
         <div class="form-group">
-            <label>Van Number:</label>
-            <input type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber">
+            <label>Time Received:</label>
+            <input type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
         </div>
 
         <div class="form-group">
-            <label>Time Received:</label>
-            <input type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <label>Van Number:</label>
+            <input type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber">
         </div>
 
         <div class="form-group text-center">
@@ -71,6 +71,16 @@
     </form>
 </div>
 
+<script>
+    jQuery(document).ready(function($) {
+        $(".clickable-modify").click(function() {
+            let newId = $(this).data("id");
+            if(newId) {
+                window.location = newId;
+            }
+        });
+    });
+</script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
