--- a/views/addRequest.ejs
+++ b/views/addRequest.ejs
@@ -9,22 +9,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="addRequest.css">
 </head>
 <body>
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a style="color: white " class="navbar-brand" href="/index">Home</a>
-        </div>
-    </div>
+<!-- Navigation Bar -->
+<nav class="navbar">
+    <ul>
+        <li>
+            <a href="/index">Home</a>
+        </li>
+    </ul>
 </nav>
 
 <div class="container" style="align-content: center">
-
-
     <h2 style="text-align: center">Request Form</h2>
     <form action="/submitRequest" method="post">
 
