--- a/views/archive.css
+++ b/views/archive.css
@@ -1,15 +1,61 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
 /* START: Navbar Styles */
 .navbar {
     background-color: #ac2b37;
 }
-.navbar .navbar-brand {
-    color: #ecf0f1;
+nav {
+
+    background: #aaa;
+    box-shadow: 0px 5px 0px #dedede;
 }
-.navbar .navbar-brand:hover,
-.navbar .navbar-brand:focus {
+nav ul {
+    list-style: none;
+    text-align: left;
+}
+nav ul li {
+    display: inline-block;
+}
+nav ul li a {
+    display: block;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-top: 35%;
+
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+    transition: all .5s;
+}
+nav ul li a:hover {
     color: #ffbbbc;
 }
+
+
+/* stroke */
+nav.stroke ul li a,
+nav.fill ul li a {
+    position: relative;
+}
+nav.stroke ul li a:after,
+
+nav.stroke ul li a:hover:after {
+    width: 100%;
+}
+
 /* END: Navbar Styles */
+
+h2 {
+    text-align: center;
+    padding-bottom: 8px;
+}
 
 /* START: Table Styles */
 table {
@@ -20,6 +66,11 @@ table {
 td {
     text-align: left;
     border: 1px solid #ddd;
+}
+
+/* alternate color of table entries*/
+table tr:nth-child(even) td{
+    background-color:#ffbbbc;
 }
 
 .archiveID {
