--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -9,22 +9,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="archive.css">
 </head>
 <body>
 
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a style="color: white " class="navbar-brand" href="/index">Home</a>
-        </div>
-    </div>
+<nav class="navbar">
+    <ul>
+        <li>
+            <a href="/index">Home</a>
+        </li>
+    </ul>
 </nav>
 
 <div class="container" style="align-content: center">
+
+    <h2><b>Ride Request Archive</b></h2>
     <!-- Archive Table -->
     <div>
         <table>
@@ -39,7 +41,6 @@
             </tr>
 
             <% archivedRequestRows.forEach(function (row) { %>
-
                 <tr>
                     <td class="archiveID"><%= row.idarchivedRequests %></td>
                     <td class="archiveFrom"><%= row.rideFrom %></td>
@@ -47,10 +48,10 @@
                     <td class="archivePassengers"><%= row.numPassengers %></td>
                     <td class="archiveAccom"><%= row.accommodations %></td>
                     <td class="archiveVanNo"><%= row.vanNumber %></td>
-                    <td class="archiveTime"><%= row.timeIn.slice(4,21) %></td>
+                    <td class="archiveTime"><%= row.timeIn.slice(4, 21) %></td>
                 </tr>
-
             <% }); %>
+
         </table>
     </div>
 
