--- a/views/index.css
+++ b/views/index.css
@@ -216,3 +216,24 @@ td{
 .rightTable tr:nth-child(odd) td{
     background-color:#AAAAAA;
 }
+
+/* Tooltip style */
+.hasTooltip span {
+    display: none;
+    text-decoration: none;
+    padding: 3px;
+}
+
+.hasTooltip:hover span {
+    display: block;
+    position: absolute;
+    background-color: #FFF;
+    border: 1px solid #CCC;
+    margin: 2px 10px;
+}
+
+/*make tooltip box to have max width*/
+table span{
+    max-width: 200px;
+    white-space: normal;
+}
