--- a/views/addRequest.ejs
+++ b/views/addRequest.ejs
@@ -40,7 +40,7 @@
 
         <div class="form-group">
             <label>Number of Passengers:</label>
-            <input type="number" class="form-control" min="0" name="numPassengers">
+            <input type="number" class="form-control" min="0" max="5" name="numPassengers">
         </div>
 
         <label>Are Accommodations Needed?</label>
