--- a/views/addRequest.ejs
+++ b/views/addRequest.ejs
@@ -17,7 +17,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar">
-    <ul>
+    <ul class="navbar-nav">
         <li>
             <a href="/index">Home</a>
         </li>
